Add more APIs for exchangeRate
